--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "prisma:generate": "yarn prisma generate",
     "prisma:studio": "yarn prisma studio",
+    "codegen:watch": "graphql-codegen --config codegen.yml --watch",
     "codegen:generate": "graphql-codegen --config codegen.yml"
   },
   "devDependencies": {
