--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.1.0",
+    "@mantine/dates": "^4.1.0",
+    "@mantine/hooks": "^4.1.0",
+    "@mantine/next": "^4.1.0",
+    "@mantine/notifications": "^4.1.0",
+    "@mantine/prism": "^4.1.0",
+    "cookies-next": "^2.0.4",
+    "dayjs": "^1.11.0",
     "next": "12.1.0",
+    "prism-react-renderer": "^1.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tabler-icons-react": "^1.43.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.5.0",
     "typescript": "4.6.2"
   }
 }
