--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen:generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@mantine/core": "^4.1.0",
     "@mantine/dates": "^4.1.0",
     "@mantine/hooks": "^4.1.0",
@@ -17,6 +19,7 @@
     "@mantine/prism": "^4.1.0",
     "cookies-next": "^2.0.4",
     "dayjs": "^1.11.0",
+    "graphql": "^16.3.0",
     "next": "12.1.0",
     "prism-react-renderer": "^1.3.1",
     "react": "17.0.2",
@@ -24,11 +27,15 @@
     "tabler-icons-react": "^1.43.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
-    "typescript": "4.6.2"
+    "typescript": "4.6.2",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-react-apollo": "3.2.11"
   }
 }
