--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "private": true,
   "scripts": {
     "dev": "docker-compose -f docker-compose.dev.yml up",
-    "dev:clean": "docker-compose -f docker-compose.dev.yml down"
+    "dev:clean": "docker-compose -f docker-compose.dev.yml down -v --remove-orphans"
   }
 }
