--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/lireddit"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/lilreddit"
