--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,10 +1,14 @@
-FROM node:17-alpine
+FROM node:alpine
 
 WORKDIR /app
 
 COPY package.json yarn.lock ./
 
+COPY .env ./
+
 RUN yarn --non-interactive
+
+RUN yarn prisma:generate
 
 COPY . .
 
