--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "http://localhost:5000/graphql"
+schema: "http://localhost:8080/api/graphql"
 documents: "src/graphql/**/*.graphql"
 generates:
   src/graphql/generated/graphql.tsx:
