--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"yarn codegen:generate --watch\" \"next dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -28,14 +28,15 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@graphql-codegen/typescript-react-apollo": "3.2.11",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "concurrently": "^7.1.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
-    "typescript": "4.6.2",
-    "@graphql-codegen/typescript-operations": "2.3.5",
-    "@graphql-codegen/typescript": "2.4.8",
-    "@graphql-codegen/typescript-react-apollo": "3.2.11"
+    "typescript": "4.6.2"
   }
 }
