--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "start": "docker-compose up",
     "dev": "docker-compose -f docker-compose.dev.yml up",
     "clean:dev": "docker-compose -f docker-compose.dev.yml down -v --remove-orphans"
   }
