--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     restart: always
     volumes:
       - redis-volume:/bitnami/redis/data
+    ports:
+      - "6379"
     environment:
       REDIS_PASSWORD: &redis_password redispassword
 
@@ -25,43 +27,45 @@ services:
       options:
         max-size: 10m
         max-file: "3"
+    ports:
+      - "5432"
     volumes:
       - postgres-volume:/var/lib/postgresql/data
-  # copy the sql script to create tables
-  # - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+
+  migration:
+    image: biem97/lilreddit-migration:latest
+    environment:
+      NODE_ENV: &global_env production
+    depends_on:
+      - postgres
 
   server:
-    build:
-      context: ./server
-      dockerfile: Dockerfile.dev
-    # volumes:
-    #   - ./server:/app
+    image: biem97/lilreddit-server:latest
     environment:
       REDIS_PASSWORD: *redis_password
-      NODE_ENV: &global_env development
+      NODE_ENV: *global_env
+    ports:
+      - "5000"
     depends_on:
       - postgres
       - redis
 
   client:
-    stdin_open: true # needed to allow react-scripts to watch for changes
-    build:
-      context: ./client
-      dockerfile: Dockerfile.dev
-    # volumes:
-    #   - ./client:/app
+    image: biem97/lilreddit-client:latest
     depends_on:
       - server
+    ports:
+      - "3000"
     environment:
       NODE_ENV: *global_env
 
   nginx:
+    image: biem97/nginx:latest
     restart: always
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile.dev
     ports:
-      - 8080:8080
+      - "8080"
     depends_on:
       - server
       - client
+    labels:
+      kompose.service.type: LoadBalancer
