--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "yarn prisma migrate dev && yarn prisma db seed && concurrently \"nodemon --exec ts-node src/index.ts\" \"yarn codegen:generate --watch\"",
+    "dev": "concurrently \"nodemon --exec ts-node src/index.ts\" \"yarn codegen:generate --watch\"",
+    "prisma:migrate": "yarn prisma migrate",
+    "prisma:seed": "yarn prisma:migrate dev && yarn prisma db seed",
     "prisma:generate": "yarn prisma generate",
     "prisma:studio": "yarn prisma studio",
     "codegen:generate": "graphql-codegen --config codegen.yml"
